[project]
name = "csvtopdf"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem"}
]
requires-python = ">=3.13"
dependencies = [
    "fpdf (>=1.7.2,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
